# lan_clipboard

./: .gitignore  Cargo.toml  README.md  build.rs  packets.proto
configs/: client.toml  server.toml
lan_clipboard_client/: Cargo.toml
lan_clipboard_client/src/: cli.rs  client.rs  config.rs  daemon.rs  logging.rs  main.rs  state.rs
lan_clipboard_server/: Cargo.toml
lan_clipboard_server/src/: cli.rs  config.rs  daemon.rs  main.rs
lan_clipboard_server/src/server/: mod.rs  node.rs  state.rs
src/: lib.rs  packets.rs
