[package]
name = "lan_clipboard_client"
version = "0.1.0"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]

[dependencies]
lan_clipboard = { path = "../" }
protobuf = "1.4"
clipboard = { version = "0.4", path = "../../rust-clipboard" }
rustls = "0.11"
chrono = "0.4"
mio = "0.6"
rust-crypto = "0.2"
parking_lot = "0.5"
