[package]
name = "lan_clipboard_client"
version = "0.1.0"
authors = ["Kyle Clemens <lan_clipboard@kyleclemens.com>"]
description = "The client component of the lan_clipboard clipboard sharer."

[dependencies]
lan_clipboard = { path = "../" }
protobuf = "1.4"
clipboard = "0.4"
rustls = "0.11"
chrono = "0.4"
mio = "0.6"
rust-crypto = "0.2"
parking_lot = "0.5"
